Update Ball Thai League.html

--- a/Ball Thai League.html
+++ b/Ball Thai League.html
@@ -168,6 +168,314 @@
 "referer":"https://dooballx.com/",
 "playInNatPlayer": "true"},
 
+{"name":"True Ball Thai 1A🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat1a77b97579b29efec.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai1/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 1B🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat1a77b97579b29efec.png",
+"url": "https://www.ball24.tv/allchannel/?id=baygonhero1",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 1C🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat1a77b97579b29efec.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai1/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 1D🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat1a77b97579b29efec.png",
+"url": "https://dolive.thaim3u.com/doolive4k-tv/youtube-1/chunks.m3u8",
+"referer":"https://doolive4k.tv/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 1E🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat1a77b97579b29efec.png",
+"url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/aisplay1/th-sport/ballthai1/chunks.m3u8",
+"referer":"https://dooball2you.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 1F🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat1a77b97579b29efec.png",
+"url": "https://www.ufa77.fun/channel?ch=baygonhero1",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 2A🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat28acbac3d63b732cc.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai2/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 2B🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat28acbac3d63b732cc.png",
+"url": "https://www.ball24.tv/allchannel/?id=baygonhero2",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 2C🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat28acbac3d63b732cc.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai2/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 2D🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat28acbac3d63b732cc.png",
+"url": "https://dolive.thaim3u.com/doolive4k-tv/youtube-2/chunks.m3u8",
+"referer":"https://doolive4k.tv/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 2E🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat28acbac3d63b732cc.png",
+"url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/aisplay2/th-sport/ballthai2/chunks.m3u8",
+"referer":"https://dooball2you.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 2F🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat28acbac3d63b732cc.png",
+"url": "https://www.ufa77.fun/channel?ch=baygonhero2",
+"playInNatPlayer": "true"},
+ 
+ {"name":"True Ball Thai 3A🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat379e60ee36be61092.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai3/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 3B🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat379e60ee36be61092.png",
+"url": "https://www.ball24.tv/allchannel/?id=baygonhero3",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 3C🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat379e60ee36be61092.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai3/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 3D🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat379e60ee36be61092.png",
+"url": "https://dolive.thaim3u.com/doolive4k-tv/youtube-3/chunks.m3u8",
+"referer":"https://doolive4k.tv/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 3E🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat379e60ee36be61092.png",
+"url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/aisplay3/th-sport/ballthai3/chunks.m3u8",
+"referer":"https://dooball2you.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 3F🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat379e60ee36be61092.png",
+"url": "https://www.ufa77.fun/channel?ch=baygonhero3",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 4A🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat4.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai4/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 4B🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat4.png",
+"url": "https://www.ball24.tv/allchannel/?id=baygonhero4",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 4C🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat4.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai4/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+ 
+{"name":"True Ball Thai 4D🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat4.png",
+ "url": "https://dolive.thaim3u.com/doolive4k-tv/youtube-4/chunks.m3u8",
+"referer":"https://doolive4k.tv/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 4E🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat4.png",
+ "url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/aisplay4/th-sport/ballthai4/chunks.m3u8",
+"referer":"https://dooball2you.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 4F🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat4.png",
+"url": "https://www.ufa77.fun/channel?ch=baygonhero4",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 5A🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat5.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai5/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 5B🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat5.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai5/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 5C🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat5.png",
+"url": "https://goal-th.com/ช่องรายการทีวี/?id=464&tv=TrueBallThai5",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 6A🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat6.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai6/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 6B🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat6.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai6/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 6C🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat6.png",
+"url": "https://goal-th.com/ช่องรายการทีวี/?id=465&tv=TrueBallThai6",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 7A🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat7.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai7/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 7B🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat7.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai7/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 7C🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat7.png",
+"url": "https://goal-th.com/ช่องรายการทีวี/?id=466&tv=TrueBallThai7",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 8A🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat8.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai8/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 8B🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat8.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai8/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 8C🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat8.png",
+"url": "https://goal-th.com/ช่องรายการทีวี/?id=467&tv=TrueBallThai8",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 9A🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat9.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai9/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 9B🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat9.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai9/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 9C🇹🇭",
+"image":"https://img5.pic.in.th/file/secure-sv1/bat9.png",
+"url": "https://goal-th.com/ช่องรายการทีวี/?id=468&tv=TrueBallThai9",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 10A🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat10.png",
+"url": "https://cdn1.googlecdn.live/dooballx/trueballthai10/chunks.m3u8",
+"referer":"https://dooballx.com/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 10B🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat10.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/trueballthai10/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer": "true"},
+
+{"name":"True Ball Thai 10C🇹🇭",
+"image":"https://img2.pic.in.th/pic/bat10.png",
+"url": "https://goal-th.com/ช่องรายการทีวี/?id=469&tv=TrueBallThai10",
+"playInNatPlayer": "true"},
+
+{"name":"SiamSpots1-A🇯🇵",
+"image":"https://img2.pic.in.th/pic/ss14e4e2af505dcac0e.png",
+"url":"https://dookeela.live/live-tv/siamsport1",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots1-B🇯🇵",
+"image":"https://img2.pic.in.th/pic/ss14e4e2af505dcac0e.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/siamsport1/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots2-A🇯🇵",
+"image":"https://img5.pic.in.th/file/secure-sv1/ss28419984b6b487365.png",
+"url":"https://dookeela.live/live-tv/siamsport2",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots2-B🇯🇵",
+"image":"https://img5.pic.in.th/file/secure-sv1/ss28419984b6b487365.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/siamsport2/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots3-A🇯🇵",
+"image":"https://img2.pic.in.th/pic/ss31db82d0522d46d35.png",
+"url":"https://dookeela.live/live-tv/siamsport3",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots3-B🇯🇵",
+"image":"https://img2.pic.in.th/pic/ss31db82d0522d46d35.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/siamsport3/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots4-A🇯🇵",
+"image":"https://img5.pic.in.th/file/secure-sv1/ss44ad043925a6aa5d1.png",
+"url":"https://dookeela.live/live-tv/siamsport4",
+"playInNatPlayer":"true"},
+
+{"name":"SiamSpots4-B🇯🇵",
+"image":"https://img5.pic.in.th/file/secure-sv1/ss44ad043925a6aa5d1.png",
+"url": "https://cdn1.googlecdnforstreaming.live/live/siamsport4/chunks.m3u8",
+"referer":"https://warpdooball.net/",
+"playInNatPlayer":"true"},
+
+
+{"name":"TSports-A🇹🇭",
+"image":"https://i.imgur.com/TFc4WRE.png",
+"url":"https://www.inwiptv.com/player_demo.php?channel=27186",
+"referer":"https://www.inwiptv.com/",
+"userAgent":"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/114.0.0.0 Safari/537.36",
+"desktop":	"true",
+"playInNatPlayer":"true"},
+
+{"name": "TSports-B🇹🇭",
+"image": "https://i.imgur.com/TFc4WRE.png",
+"url":"https://aisplay.ais.co.th/portal/live?vid=627a27b26dbfe345cfc8a27f",
+"referer":"https://ais-vidnt.com",
+userAgent:"Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1",
+"playInNatPlayer": "true"},
+
+{"name":"TSports-C🇹🇭",
+"image":"https://i.imgur.com/TFc4WRE.png",
+"url":"https://edge6a.v2h-cdn.com/t_sport/t_sport.stream/playlist.m3u8",
+"playInNatPlayer":"true"},
+
+{"name":"TSports-D🇹🇭",
+"image":"https://i.imgur.com/TFc4WRE.png",
+"url":"https://dookeela.live/live-tv/tsports7",
+"playInNatPlayer":"true"},
+
 
 
 ]
