--- a/NexterBeINSport.html
+++ b/NexterBeINSport.html
@@ -1,5 +1,5 @@
 {
-"name": "NexterPremierLeague",
+"name": "NexterBeINSport",
 "author": "Nexter",
 "image": "https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png",
 "url": "https://github.com/Tonnexter/Tonnexter/edit/KhunKamMee/NexterBeINSport.html",
@@ -17,11 +17,46 @@
 "playInNatPlayer": "true" 
 },
 
+{ 
+"name": "bein1TH", 
+"image": "https://dookeela.live/uploads/1664500365.png", 
+"url": "https://streaming.livescorethai.net/iptv/epl-bein1.stream/chunks.m3u8", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "bein1TTH", 
+"image": "https://dookeela.live/uploads/1664500365.png", 
+"url": "https://cdn1.googlecdn.live/dooballx/bein1/chunks.m3u8", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
 
 { 
 "name": "bein2", 
 "image": "https://dookeela.live/uploads/1690843424.png", 
 "url": "https://dookeela.live/live-tv/bein2", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "bein2TH", 
+"image": "https://dookeela.live/uploads/1690843424.png", 
+"url": "https://streaming.livescorethai.net/iptv/epl-bein2.stream/chunks.m3u8", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "bein2TTH", 
+"image": "https://dookeela.live/uploads/1690843424.png", 
+"url": "https://cdn1.googlecdn.live/dooballx/bein2/chunks.m3u8", 
 "info": "Nexter-BeINSport", 
 "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
 "playInNatPlayer": "true" 
@@ -37,12 +72,46 @@
 "playInNatPlayer": "true" 
 },
 
+{ 
+"name": "bein3TH", 
+"image": "https://dookeela.live/uploads/1663980670.png", 
+"url": "https://streaming.livescorethai.net/iptv/epl-bein3.stream/chunks.m3u8", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
 
+{ 
+"name": "bein3TTH", 
+"image": "https://dookeela.live/uploads/1663980670.png", 
+"url": "https://cdn1.googlecdn.live/dooballx/bein3/chunks.m3u8", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
 
 { 
 "name": "bein4", 
 "image": "https://dookeela.live/uploads/1692816640.png", 
 "url": "https://dookeela.live/live-tv/bein4", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "bein4TH", 
+"image": "https://dookeela.live/uploads/1692816640.png", 
+"url": "https://streaming.livescorethai.net/iptv/epl-bein4.stream/chunks.m3u8", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "bein4TTH", 
+"image": "https://dookeela.live/uploads/1692816640.png", 
+"url": "https://cdn1.googlecdn.live/dooballx/bein4/chunks.m3u8", 
 "info": "Nexter-BeINSport", 
 "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
 "playInNatPlayer": "true" 
@@ -59,6 +128,15 @@
 "playInNatPlayer": "true" 
 },
 
+{ 
+"name": "bein5TH", 
+"image": "https://dookeela.live/uploads/1693290376.png", 
+"url": "https://cdn1.googlecdn.live/dooballx/bein5/chunks.m3u8", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
 
 
 { 
@@ -70,12 +148,48 @@
 "playInNatPlayer": "true" 
 },
 
+{ 
+"name": "bein6TH", 
+"image": "https://dookeela.live/uploads/1694719513.png", 
+"url": "https://cdn1.googlecdn.live/dooballx/bein6/chunks.m3u8", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
 
 
 { 
 "name": "bein7", 
 "image": "https://dookeela.live/uploads/1694719622.png", 
 "url": "https://dookeela.live/live-tv/bein7", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "bein7TH", 
+"image": "https://dookeela.live/uploads/1694719622.png", 
+"url": "https://cdn1.googlecdn.live/dooballx/bein7/chunks.m3u8", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "bein8TH", 
+"image": "https://upload.wikimedia.org/wikipedia/commons/4/41/BeIN_Sports_logo_%282017%29.png", 
+"url": "https://cdn1.googlecdn.live/dooballx/bein8/chunks.m3u8", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "bein9TH", 
+"image": "https://upload.wikimedia.org/wikipedia/commons/4/41/BeIN_Sports_logo_%282017%29.png", 
+"url": "https://cdn1.googlecdn.live/dooballx/bein9/chunks.m3u8", 
 "info": "Nexter-BeINSport", 
 "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
 "playInNatPlayer": "true" 
