--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -28,7 +28,22 @@
 	 "userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
- 
+     {
+      "name": "True Premier Football 1TH",
+     "image": "https://dookeela.live/uploads/1664499665.png",
+     "url": "https://streaming.livescorethai.net/iptv/bsb-epl1.stream/chunks.m3u8",
+     "referer": "https://dookeela.live/",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+     {
+      "name": "True Premier Football 1TTH",
+     "image": "https://dookeela.live/uploads/1664499665.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
+     "referer": "https://dookeela.live/",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
  
     {
      "name": "True Premier Football 2",
@@ -39,7 +54,22 @@
 	 "userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
 },
- 
+    {
+     "name": "True Premier Football 2TH",
+     "image": "https://dookeela.live/uploads/1664499673.png",
+     "url": "https://streaming.livescorethai.net/iptv/bsb-epl2.stream/chunks.m3u8",
+     "referer": "https://dookeela.live/",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
+},
+    {
+     "name": "True Premier Football 2TTH",
+     "image": "https://dookeela.live/uploads/1664499673.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
+     "referer": "https://dookeela.live/",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
+}, 
  
     {
      "name": "True Premier Football 3",
@@ -48,6 +78,22 @@
      "referer": "https://dookeela.live/",
 	 "info": "NexterPremierLeague",
 	 "userAgent": "exoplayer_video",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
+ },
+    {
+     "name": "True Premier Football 3TH",
+     "image": "https://dookeela.live/uploads/1664499681.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
+     "referer": "https://dookeela.live/",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
+ },
+    {
+     "name": "True Premier Football 3TTH",
+     "image": "https://dookeela.live/uploads/1664499681.png",
+     "url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf3/playlist.m3u8",
+     "referer": "https://dookeela.live/",
+     "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
  },
  
@@ -60,6 +106,22 @@
 	 "userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
+    {
+     "name": "True Premier Football 4TH",
+     "image": "https://dookeela.live/uploads/1664499692.png",
+     "url": "https://streaming.livescorethai.net/iptv/bsb-epl4.stream/chunks.m3u8",
+     "referer": "https://dookeela.live/",
+	 "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
+    },
+    {
+     "name": "True Premier Football 4TTH",
+     "image": "https://dookeela.live/uploads/1664499692.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-4.stream/chunks.m3u8",
+     "referer": "https://dookeela.live/",
+	 "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
+    },
  
     {
      "name": "True Premier Football 5",
@@ -68,6 +130,22 @@
      "referer": "https://dookeela.live/",
 	 "info": "NexterPremierLeague",
 	 "userAgent": "exoplayer_video",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
+    },
+    {
+     "name": "True Premier Football 5TH",
+     "image": "https://dookeela.live/uploads/1664499700.png",
+     "url": "https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
+     "referer": "https://dookeela.live/",
+	 "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
+    },
+    {
+     "name": "True Premier Football 5TTH",
+     "image": "https://dookeela.live/uploads/1664499700.png",
+     "url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf5/playlist.m3u8",
+     "referer": "https://dookeela.live/",
+	 "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
 
