--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -29,7 +29,7 @@
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
      {
-      "name": "True Premier Football 1TH",
+      "name": "Premier Football 1TH",
      "image": "https://dookeela.live/uploads/1664499665.png",
      "url": "https://streaming.livescorethai.net/iptv/bsb-epl1.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
@@ -37,7 +37,7 @@
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
      {
-      "name": "True Premier Football 1TTH",
+      "name": "Premier Football 1TTH",
      "image": "https://dookeela.live/uploads/1664499665.png",
      "url": "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
@@ -55,7 +55,7 @@
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
 },
     {
-     "name": "True Premier Football 2TH",
+     "name": "Premier Football 2TH",
      "image": "https://dookeela.live/uploads/1664499673.png",
      "url": "https://streaming.livescorethai.net/iptv/bsb-epl2.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
@@ -63,7 +63,7 @@
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
 },
     {
-     "name": "True Premier Football 2TTH",
+     "name": "Premier Football 2TTH",
      "image": "https://dookeela.live/uploads/1664499673.png",
      "url": "https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
@@ -81,7 +81,7 @@
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
  },
     {
-     "name": "True Premier Football 3TH",
+     "name": "Premier Football 3TH",
      "image": "https://dookeela.live/uploads/1664499681.png",
      "url": "https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
@@ -89,7 +89,7 @@
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
  },
     {
-     "name": "True Premier Football 3TTH",
+     "name": "Premier Football 3TTH",
      "image": "https://dookeela.live/uploads/1664499681.png",
      "url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf3/playlist.m3u8",
      "referer": "https://dookeela.live/",
@@ -107,7 +107,7 @@
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
     {
-     "name": "True Premier Football 4TH",
+     "name": "Premier Football 4TH",
      "image": "https://dookeela.live/uploads/1664499692.png",
      "url": "https://streaming.livescorethai.net/iptv/bsb-epl4.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
@@ -115,7 +115,7 @@
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
     {
-     "name": "True Premier Football 4TTH",
+     "name": "Premier Football 4TTH",
      "image": "https://dookeela.live/uploads/1664499692.png",
      "url": "https://streaming.livescorethai.net/iptv/epl-4.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
@@ -133,7 +133,7 @@
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
     {
-     "name": "True Premier Football 5TH",
+     "name": "Premier Football 5TH",
      "image": "https://dookeela.live/uploads/1664499700.png",
      "url": "https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
@@ -141,7 +141,7 @@
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
     {
-     "name": "True Premier Football 5TTH",
+     "name": "Premier Football 5TTH",
      "image": "https://dookeela.live/uploads/1664499700.png",
      "url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf5/playlist.m3u8",
      "referer": "https://dookeela.live/",
