--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -33,6 +33,7 @@
      "url": "https://streaming.livescorethai.net/iptv/bsb-epl1.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
      "info": "NexterPremierLeague",
+"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
      {
@@ -41,6 +42,7 @@
      "url": "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
      "info": "NexterPremierLeague",
+"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
  
@@ -59,6 +61,7 @@
      "url": "https://streaming.livescorethai.net/iptv/bsb-epl2.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
      "info": "NexterPremierLeague",
+"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
 },
     {
@@ -67,6 +70,7 @@
      "url": "https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
      "info": "NexterPremierLeague",
+"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
 }, 
  
@@ -85,6 +89,7 @@
      "url": "https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
      "info": "NexterPremierLeague",
+"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
  },
     {
@@ -93,6 +98,7 @@
      "url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf3/playlist.m3u8",
      "referer": "https://dookeela.live/",
      "info": "NexterPremierLeague",
+"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
  },
  
@@ -111,6 +117,7 @@
      "url": "https://streaming.livescorethai.net/iptv/bsb-epl4.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
 	 "info": "NexterPremierLeague",
+"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
     {
@@ -119,6 +126,7 @@
      "url": "https://streaming.livescorethai.net/iptv/epl-4.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
 	 "info": "NexterPremierLeague",
+"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
  
@@ -137,6 +145,7 @@
      "url": "https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
      "referer": "https://dookeela.live/",
 	 "info": "NexterPremierLeague",
+"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
     {
@@ -145,6 +154,7 @@
      "url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf5/playlist.m3u8",
      "referer": "https://dookeela.live/",
 	 "info": "NexterPremierLeague",
+"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
 
