--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -31,18 +31,16 @@
       "name": "Premier Football 1TH",
      "image": "https://dookeela.live/uploads/1664499665.png",
      "url": "https://streaming.livescorethai.net/iptv/bsb-epl1.stream/chunks.m3u8",
-     "referer": "https://dookeela.live/",
+     "referer": "https://livescorethai.net/",
      "info": "NexterPremierLeague",
-"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
      {
       "name": "Premier Football 1TTH",
      "image": "https://dookeela.live/uploads/1664499665.png",
      "url": "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
-     "referer": "https://dookeela.live/",
+     "referer": "https://livescorethai.net/",
      "info": "NexterPremierLeague",
-"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
  
@@ -52,25 +50,22 @@
      "url": "https://dookeela.live/live-tv/epl2",
      "referer": "https://dookeela.live/",
      "info": "NexterPremierLeague",
-	 "userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
 },
     {
      "name": "Premier Football 2TH",
      "image": "https://dookeela.live/uploads/1664499673.png",
      "url": "https://streaming.livescorethai.net/iptv/bsb-epl2.stream/chunks.m3u8",
-     "referer": "https://dookeela.live/",
+     "referer": "https://livescorethai.net/",
      "info": "NexterPremierLeague",
-"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
 },
     {
      "name": "Premier Football 2TTH",
      "image": "https://dookeela.live/uploads/1664499673.png",
      "url": "https://streaming.livescorethai.net/iptv/epl-2.stream/chunks.m3u8",
-     "referer": "https://dookeela.live/",
+     "referer": "https://livescorethai.net/",
      "info": "NexterPremierLeague",
-"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
 }, 
  
@@ -87,9 +82,8 @@
      "name": "Premier Football 3TH",
      "image": "https://dookeela.live/uploads/1664499681.png",
      "url": "https://streaming.livescorethai.net/iptv/epl-3.stream/chunks.m3u8",
-     "referer": "https://dookeela.live/",
+     "referer": "https://livescorethai.net/",
      "info": "NexterPremierLeague",
-"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
  },
     {
@@ -98,7 +92,6 @@
      "url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf3/playlist.m3u8",
      "referer": "https://dookeela.live/",
      "info": "NexterPremierLeague",
-"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"    
  },
  
@@ -115,18 +108,16 @@
      "name": "Premier Football 4TH",
      "image": "https://dookeela.live/uploads/1664499692.png",
      "url": "https://streaming.livescorethai.net/iptv/bsb-epl4.stream/chunks.m3u8",
-     "referer": "https://dookeela.live/",
+     "referer": "https://livescorethai.net/",
 	 "info": "NexterPremierLeague",
-"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
     {
      "name": "Premier Football 4TTH",
      "image": "https://dookeela.live/uploads/1664499692.png",
      "url": "https://streaming.livescorethai.net/iptv/epl-4.stream/chunks.m3u8",
-     "referer": "https://dookeela.live/",
+     "referer": "https://livescorethai.net/",
 	 "info": "NexterPremierLeague",
-"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
  
@@ -143,18 +134,16 @@
      "name": "Premier Football 5TH",
      "image": "https://dookeela.live/uploads/1664499700.png",
      "url": "https://streaming.livescorethai.net/iptv/epl-5.stream/chunks.m3u8",
-     "referer": "https://dookeela.live/",
+     "referer": "https://livescorethai.net/",
 	 "info": "NexterPremierLeague",
-"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
     {
      "name": "Premier Football 5TTH",
      "image": "https://dookeela.live/uploads/1664499700.png",
      "url": "https://rr3-ic3d-ndjcs.huaweicdncloud.com/dooball2you/tpf5/playlist.m3u8",
-     "referer": "https://dookeela.live/",
+     "referer": "https://livescorethai.net/",
 	 "info": "NexterPremierLeague",
-"userAgent": "exoplayer_video",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true"
     },
 
