--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -6,7 +6,19 @@
 "info": "โรงหนังของแล้ม",
 "stations" : [
 
+  {  
+name:"Bionic เหนือมนุษย์ (2024)",
+image:"https://m.media-amazon.com/images/M/MV5BMDk1NjU3NDgtMmQwZS00NDkxLWFiYmUtNjM5YmI4MmMyZDFlXkEyXkFqcGc@._V1_.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Bionic_2024/Bionic_2024_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.fwiptv.tv/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
 
+
+
+
+  
   {  
 name:"CUSTOMS FRONTLINE (2024) คนมหากาฬพิฆาตนรก",
 image:"https://www.fwiptv.tv/images/movie/Customs_Frontline_(2024)_%E0%B8%84%E0%B8%99%E0%B8%A1%E0%B8%AB%E0%B8%B2%E0%B8%81%E0%B8%B2%E0%B8%AC%E0%B8%9E%E0%B8%B4%E0%B8%86%E0%B8%B2%E0%B8%95%E0%B8%99%E0%B8%A3%E0%B8%81.webp",
