--- a/MovieChannel.html
+++ b/MovieChannel.html
@@ -13,6 +13,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+
+    {
+     "name": "HBO TH",
+     "image": "https://dookeela.live/uploads/1703686191.png",
+     "url": "https://www.livedoomovies.com:4432/02_HBOHD_720p/chunklist.m3u8",
+     "referer": "https://dookeela.live/",
+     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
+    },
+
     {
      "name": "HBO Family",
      "image": "https://dookeela.live/uploads/1703786776.png",
