--- a/MovieChannel.html
+++ b/MovieChannel.html
@@ -15,12 +15,13 @@
     },
 
     {
-     "name": "HBO TH",
-     "image": "https://dookeela.live/uploads/1703686191.png",
-     "url": "https://www.livedoomovies.com:4432/02_HBOHD_720p/chunklist.m3u8",
-     "referer": "https://dookeela.live/",
-     "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
-     "playInNatPlayer": "true"
+    "name": " HBOTH",
+    "image": "https://realmetx.serv00.net/logo/hbo.png",
+    "imageScale": "fitStart",
+    "url": "https://cco-streamer1.cdn.3bbtv.com:8443/3bb/live/103/103.mpd",
+    "online": "true",
+    "userAgent": "ExoPlayer",
+    "drm": "clearkey", "drmkey": "9c5735afb4fd402580360aed8364469c:128d55d9ac2b47ad85f86b5d08320179"
     },
 
     {
