--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -27,13 +27,6 @@
 },
 
 
-{
-				"name": "Nexter-PremierLeague3",
-				"image": "https://upload.wikimedia.org/wikipedia/en/thumb/f/f2/Premier_League_Logo.svg/1200px-Premier_League_Logo.svg.png",
-				"url": "https://wandering-oldman.github.io/sport/sport.html",
-				"info": "Nexter-PremierLeague",
-				"import": false
-},
 
 
 {
@@ -61,6 +54,15 @@
 "image": "https://f.ptcdn.info/991/075/000/r5e38kk32MWyWI02h5T-o.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Ball%20Thai%20League.html",
 "import": "true"
+},
+
+
+{
+				"name": "Nexter-OldMan-AllSports",
+				"image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRaT8fTTFNRW4KEmYZ30qv5idR7IaeX_DA44ACUKVAgra_UPfgnSxskcdR56v8wLlpovxk&usqp=CAU",
+				"url": "https://wandering-oldman.github.io/sport/sport.html",
+				"info": "Nexter-PremierLeague",
+				"import": false
 },
 
 
