--- a/Nexter-PremierLeague.html
+++ b/Nexter-PremierLeague.html
@@ -40,7 +40,7 @@
 
 
 {
-"name":	"Sports Nexter ALLChannel ",
+"name":	"Sports Nexter ALL-Channel ",
 "author":  "Nexter",
 "image":	"https://upload.wikimedia.org/wikipedia/commons/thumb/3/32/Nexter_Logo.svg/2560px-Nexter_Logo.svg.png",
 "url":   "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Sports%20Nexter%20ALLChannel.html",
@@ -49,7 +49,7 @@
 
 
 {
-"name": "Thai Premier League CH",
+"name": "Thai Premier League C-H",
 "author": "Nexter",
 "image": "https://f.ptcdn.info/991/075/000/r5e38kk32MWyWI02h5T-o.png",
 "url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Ball%20Thai%20League.html",
@@ -59,7 +59,7 @@
 
 {
 				"name": "Nexter-OldMan-AllSports",
-				"image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRaT8fTTFNRW4KEmYZ30qv5idR7IaeX_DA44ACUKVAgra_UPfgnSxskcdR56v8wLlpovxk&usqp=CAU",
+				"image": "https://upload.wikimedia.org/wikipedia/commons/thumb/5/54/Logo_MAN.png/1200px-Logo_MAN.png",
 				"url": "https://wandering-oldman.github.io/sport/sport.html",
 				"info": "Nexter-PremierLeague",
 				"import": false
