--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -55,6 +55,14 @@ url:"https://fw4free.inwstream.com/fw4free/ch1.stream/playlist.m3u8",
 "playInNatPlayer": "true"
 },
 
+{  
+name:"Premier Football HD 1KUB",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl1.png",
+url:"https://dooballkub.com/live/?epl1",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
     {
      "name": "True Premier Football 2",
      "image": "https://dookeela.live/uploads/1664499673.png",
@@ -86,6 +94,15 @@ url:"https://fw4free.inwstream.com/fw4free/ch1.stream/playlist.m3u8",
 name:"Premier Football HD 2FW",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
 url:"https://fw4free.inwstream.com/fw4free/ch2.stream/playlist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+{  
+name:"Premier Football HD 2KUB",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl2.png",
+url:"https://dooballkub.com/live/?epl2",
 "referer": "https://madoo.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
@@ -128,6 +145,15 @@ url:"https://fw4free.inwstream.com/fw4free/ch3.stream/playlist.m3u8",
 "playInNatPlayer": "true"
 },
 
+{  
+name:"Premier Football HD 3KUB",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl3.png",
+url:"https://dooballkub.com/live/?epl3",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
     {
      "name": "True Premier Football 4",
      "image": "https://dookeela.live/uploads/1664499692.png",
@@ -165,6 +191,15 @@ url:"https://fw4free.inwstream.com/fw4free/ch4.stream/playlist.m3u8",
 "playInNatPlayer": "true"
 },
 
+{  
+name:"Premier Football HD 4FW",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl4.png",
+url:"https://dooballkub.com/live/?epl4",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
     {
      "name": "True Premier Football 5",
      "image": "https://dookeela.live/uploads/1664499700.png",
@@ -197,6 +232,15 @@ url:"https://fw4free.inwstream.com/fw4free/ch4.stream/playlist.m3u8",
 name:"Premier Football HD 5FW",
 image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl5.png",
 url:"https://fw4free.inwstream.com/fw4free/ch5.stream/playlist.m3u8",
+"referer": "https://madoo.com/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+{  
+name:"Premier Football HD 5FW",
+image:"https://www.img08.xyz/assets/img/ch_logo/doomovie-epl5.png",
+url:"https://dooballkub.com/live/?epl5",
 "referer": "https://madoo.com/",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
