--- a/DigitalTV.html
+++ b/DigitalTV.html
@@ -9,6 +9,7 @@
 "image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE/channelicon/0013_R.png", 
 "url": "https://inwiptv.com/player_demo.php?channel=27138", 
 "referer": "",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true" 
 },   
 
@@ -17,7 +18,17 @@
 "image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE/channelicon/0013_R.png", 
 "url": "http://appdootv2.dootvde.com:1935/live/50023_thairath_hd.stream.smil/playlist.m3u8", 
 "referer": "",
-"playInNatPlayer": "true" 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+{ 
+"name": "Thairath TV (2)",  
+"image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE/channelicon/0013_R.png", 
+"url": "https://ssai-streaming.thairath.co.th/bamm-csai/720p/index.m3u8", 
+"referer": "",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
 },
 
 
