--- a/DigitalTV.html
+++ b/DigitalTV.html
@@ -25,7 +25,7 @@
 { 
 "name": "Thairath TV (2)",  
 "image": "https://ais-s.ais-vidnt.com/ais/play/origin/LIVE/channelicon/0013_R.png", 
-"url": "https://ssai-streaming.thairath.co.th/bamm-csai/720p/index.m3u8", 
+"url": "https://www.livedoomovies.com:4432/02_THAIRATH_720p/chunklist.m3u8", 
 "referer": "",
 "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
 "playInNatPlayer": "true"
