--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -19,6 +19,25 @@ url:"https://m1free.inwstream.com:1936/movie3/SWAT_Duty_City_Crisis_2020/SWAT_Du
 },
 
 
+        {  
+name:"Heart of the Hunter หัวใจนักล่า (2024) NETFLIX",
+image:"https://img.inwiptv.net/wallpaper/20240330170411hDUsB52t29yrJO6Emx86z8rj2NY.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Heart_of_the_Hunter_2024/Heart_of_the_Hunter_2024_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.fwiptv.tv/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+            {  
+name:"Bad Boys: Ride or Die คู่หูขวางนรก: ลุยต่อให้โลกจำ (2024)",
+image:"https://img.inwiptv.net/wallpaper/20240611175717xHEOGkTom8b2UMq1rsdasdasdDVqxUZ7Ce.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Bad_Boys_Ride_or_Die_2024/Bad_Boys_Ride_or_Die_2024_th_1080.mp4/playlist.m3u8",
+"referer": "https://www.fwiptv.tv/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
   
   {  
 name:"Metro รถด่วนขบวนนรก (2013)",
