--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -19,7 +19,28 @@ url:"https://m1free.inwstream.com:1936/movie3/SWAT_Duty_City_Crisis_2020/SWAT_Du
 },
 
 
+    {  
+name:"Chrysalis คนระห่ำเปลี่ยนสมองลุย (2007)",
+image:"https://img.inwiptv.net/wallpaper/20241001222802phot%E0%B8%81o.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Chrysalis_2007/Chrysalis_2007_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.fwiptv.tv/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
         {  
+name:"ฝ่านรกเมืองเทวดา Bangkok Breaking: Heaven and Hell (2024)",
+image:"https://img.inwiptv.net/wallpaper/20240927035511igtm12Wy9EUlxFeyb4v8beeRyuYSY.jpg",
+url:"https://m1free.inwstream.com:1936/movie4/Bangkok_Breaking_Heaven_and_Hell_2024/Bangkok_Breaking_Heaven_and_Hell_2024_th_1080.mp4/playlist.m3u8",
+"referer": "https://www.fwiptv.tv/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+
+            {  
 name:"Heart of the Hunter หัวใจนักล่า (2024) NETFLIX",
 image:"https://img.inwiptv.net/wallpaper/20240330170411hDUsB52t29yrJO6Emx86z8rj2NY.jpg",
 url:"https://m1free.inwstream.com:1936/movie3/Heart_of_the_Hunter_2024/Heart_of_the_Hunter_2024_th_1080.mp4/chunk.m3u8",
