--- a/MOVIeSERIES.html
+++ b/MOVIeSERIES.html
@@ -13,6 +13,14 @@
 "import": false
 }, 
 
+{
+"name": "MOVIE 24 HD",
+"image": "https://png.pngtree.com/png-clipart/20220509/original/pngtree-live-streaming-png-logo-png-image_7667572.png",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/refs/heads/KhunKamMee/Movie24HD.html",
+"import": false
+}, 
+
+
 
 {
 "name": "MOVIE NungHDD(สำรอง)",
