--- a/Nexter Moviees.html
+++ b/Nexter Moviees.html
@@ -8,6 +8,37 @@
 
 
 
+    {  
+name:"King Kong (1976)",
+image:"https://m.media-amazon.com/images/M/MV5BNGQ1MGRmNzQtMjAwYi00NDllLTgzOWUtOWJkM2E4MjhhNWI3XkEyXkFqcGc@._V1_.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/King_Kong_1976/King_Kong_1976_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.fwiptv.tv/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+    {  
+name:"Out for Justice ทวงหนี้ แบบยมบาล (1991)",
+image:"https://mono29.com/app/wp-post-thumbnail/yjzLXs.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Out_for_Justice_1991/Out_for_Justice_1991_th_1080.mp4/chunk.m3u8",
+"referer": "https://www.fwiptv.tv/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+
+    {  
+name:"Mortal Engines สมรภูมิล่าเมือง: จักรกลมรณะ (2018)",
+image:"https://www.khaosod.co.th/wpapp/uploads/2018/12/MTE_INTL_TSR_DGTL_1_SHT_OV.jpg",
+url:"https://m1free.inwstream.com:1936/movie3/Mortal-Engines-2018/Mortal-Engines-2018-th-1080p.m4v/chunk.m3u8",
+"referer": "https://www.fwiptv.tv/",
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140 Maxthon/5.2.7.3000",
+"playInNatPlayer": "true"
+},
+
+    
+
 
     {  
 name:"Swat Duty: City Crisis หน่วยพิฆาตล่าข้ามโลก (2020)",
